<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40sp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/plateknife"
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:layout_margin="10sp"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="100sp"
                    app:srcCompat="@drawable/plate"
                    app:tint="@color/gradient" />

                <TextView
                    android:id="@+id/Logincafetxt"
                    android:layout_width="match_parent"
                    android:layout_height="103dp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="Cafe House"
                    android:textColor="@color/orange"
                    android:textSize="60sp"
                    android:textStyle="italic"
                    tools:ignore="HardcodedText" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/user_name"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:text="" />


                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/dots"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:text=""
                    android:autofillHints="" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signinbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/but_gradient"
                    android:text="@string/sign_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view3"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="#151414" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_with"
                        android:textColor="#050505" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="#131313" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fbtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/fbbackground"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebook" />

                    <TextView
                        android:id="@+id/Googletxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/gbackground"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/google"
                        android:textColor="#FAF7F7" />

                </LinearLayout>

                <TextView
                    android:id="@+id/wanttotxt"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:text="@string/want_to_create_account"
                    android:textColor="#0C0C0C"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    </LinearLayout>